# VCEC

./: .gitignore
crypto/doc/: 加密芯片使用开发指南-版本_V0.1.docx  联系我们.docx
crypto/src/ccm3310/: CMakeLists.txt
crypto/src/ccm3310/src/app/: ccm3310s_test.c
crypto/src/ccm3310/src/ccm3310/: basic.c  basic.h  ccm3310s.c  ccm3310s.h  com.c  com.h  crc32.c  crc32.h  key.c  key.h
crypto/src/ccm3310/src/drivers/: drvlib.h  drvlib_bytes.h  drvlib_ccm3310s.c  drvlib_ccm3310s.h  drvlib_delay.c  drvlib_delay.h  drvlib_gpio.c  drvlib_gpio.h  drvlib_led.c  drvlib_led.h  drvlib_printf.c  drvlib_printf.h  drvlib_simos_timer.c  drvlib_simos_timer.h  drvlib_spi.c  drvlib_spi.h  drvlib_type.h
crypto/src/ccm3310s/: ccm3310s.c  ccm3310s.h
